# charset-normalizer-rs

./: Cargo.toml
crates/charset-normalizer/: Cargo.toml
crates/charset-normalizer-cli/: Cargo.toml
crates/charset-normalizer-cli/src/: normalizer.rs  performance.rs
crates/charset-normalizer/src/: entity.rs
