[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
version = "1.0.6"
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
edition = "2021"
description = "Truly universal encoding detector in pure Rust - port of Python version"
license-file = "LICENSE"
documentation = "https://docs.rs/charset-normalizer-rs"
readme = "README.md"
repository = "https://github.com/nickspring/charset-normalizer-rs"
keywords = ["encoding", "charset", "detector", "conversion", "normalizer"]
categories = ["encoding", "internationalization", "localization"]
exclude = [
  "/src/tests/data/**",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/.github/**",
  ".gitattributes",
]

[workspace.dependencies]
ahash          = { version = "0.8.3" }
bitflags       = { version = "2.4.0" }
cached         = { version = "0.46.0" }
counter        = { version = "0.5.7" }
encoding       = { version = "0.2.33" }
icu_normalizer = { version = "1.3.2" }
icu_properties = { version = "1.3.2" }
log            = { version = "0.4.20" }
once_cell      = { version = "1.18.0" }
ordered-float  = { version = "3.9.1" }
regex          = { version = "1.9.3" }
serde          = { version = "1.0.188", features = ["derive"] }
serde_json     = { version = "1.0.107" }
strsim         = { version = "0.10.0" }
unicode_names2 = { version = "1.1.0" }

[profile.release]
opt-level = 3
lto       = "fat"
