[package]
name = "charset-normalizer-rs"
version = "1.0.6"
authors = ["Nikolay Yarovoy <nikolay.yarovoy@gmail.com>"]
edition = "2021"
description = "Truly universal encoding detector in pure Rust - port of Python version"
license-file = "LICENSE"
documentation = "https://docs.rs/charset-normalizer-rs"
readme = "README.md"
repository = "https://github.com/nickspring/charset-normalizer-rs"
keywords = ["encoding", "charset", "detector", "conversion", "normalizer"]
categories = ["encoding", "internationalization", "localization"]
exclude = [
  "/src/tests/data/**",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/.github/**",
  ".gitattributes",
]

[dependencies]
ahash          = { workspace = true }
bitflags       = { workspace = true }
cached         = { workspace = true }
counter        = { workspace = true }
encoding       = { workspace = true }
icu_normalizer = { workspace = true }
icu_properties = { workspace = true }
log            = { workspace = true }
once_cell      = { workspace = true }
ordered-float  = { workspace = true }
regex          = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
strsim         = { workspace = true }
unicode_names2 = { workspace = true }

[[bench]]
name    = "large_payload"
harness = false

[[bench]]
name    = "large_datasets"
harness = false

[dev-dependencies]
criterion = { version = "0.3" }
